--- a/packages/qiao-cos/package.json
+++ b/packages/qiao-cos/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "qiao-cos",
-  "version": "0.5.3",
-  "description": "tencent cos upload tool on nodejs",
-  "keywords": [
-    "tencent",
-    "cos",
-    "upload",
-    "tool",
-    "nodejs"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-cos",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {},
-  "bin": {
-    "qcos": "./bin/qcos.js"
-  },
-  "dependencies": {
-    "cos-nodejs-sdk-v5": "^2.11.12",
-    "qiao-cli": "^0.3.3",
-    "qiao-file": "^0.4.4"
-  }
+    "name": "qiao-cos",
+    "version": "1.0.0",
+    "description": "tencent cos upload tool on nodejs",
+    "keywords": [
+        "tencent",
+        "cos",
+        "upload",
+        "tool",
+        "nodejs"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-cos",
+    "license": "MIT",
+    "main": "index.js",
+    "bin": {
+        "qcos": "./bin/qcos.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {},
+    "dependencies": {
+        "cos-nodejs-sdk-v5": "^2.11.12",
+        "qiao-cli": "^0.3.3",
+        "qiao-file": "^0.4.4"
+    }
 }
