--- a/packages/qiao-v/package.json
+++ b/packages/qiao-v/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "qiao-v",
-  "version": "0.0.0",
-  "description": "nodejs web app framework",
-  "keywords": [
-    "nodejs",
-    "web",
-    "app",
-    "framework"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-v",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {},
-  "dependencies": {}
+    "name": "qiao-v",
+    "version": "0.0.0",
+    "description": "nodejs web app framework",
+    "keywords": [
+        "nodejs",
+        "web",
+        "app",
+        "framework"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-v",
+    "license": "MIT",
+    "main": "index.js",
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "scripts": {},
+    "dependencies": {}
 }
