--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "qiao-v",
+    "name": "qiao-z",
     "version": "0.0.1",
     "description": "nodejs web app framework",
     "keywords": [
@@ -9,7 +9,7 @@
         "framework"
     ],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://code.insistime.com/qiao-v",
+    "homepage": "https://code.insistime.com/qiao-z",
     "license": "MIT",
     "main": "index.js",
     "files": [
@@ -19,5 +19,6 @@
         "type": "git",
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
     },
-    "scripts": {}
+    "scripts": {},
+    "gitHead": "62dac1065f61f0d7a471130249bf4bb24761973e"
 }
