--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -21,6 +21,7 @@
     },
     "scripts": {},
     "dependencies": {
+        "art-template": "^4.13.2",
         "parseurl": "^1.3.3",
         "qiao-file": "^1.0.1"
     }
