--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.25.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fake-indexeddb": "^4.0.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "qiao-lerna": "^0.5.2",
