--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "qiao-ajax",
-  "version": "2.6.8",
-  "description": "browser ajax and nodejs http request",
-  "keywords": [
-    "browser",
-    "ajax",
-    "nodejs",
-    "http",
-    "request"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-ajax",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "dev": "qwebpack dev ./webpack/qiao.webpack.js",
-    "dist": "qwebpack build ./webpack/qiao.webpack.js",
-    "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js",
-    "build": "rollup --config rollup.config.js",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "axios": "1.1.2"
-  },
-  "sideEffects": false
+    "name": "qiao-ajax",
+    "version": "2.6.8",
+    "description": "browser ajax and nodejs http request",
+    "keywords": [
+        "browser",
+        "ajax",
+        "nodejs",
+        "http",
+        "request"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-ajax",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "dev": "qwebpack dev ./webpack/qiao.webpack.js",
+        "dist": "qwebpack build ./webpack/qiao.webpack.js",
+        "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js",
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    },
+    "dependencies": {
+        "axios": "1.1.2"
+    }
 }
