--- a/packages/qiao-electron-cli/_demo/package.json
+++ b/packages/qiao-electron-cli/_demo/package.json
@@ -1,30 +1,27 @@
 {
   "name": "qiao-electron-demo",
-  "version": "0.1.4",
-  "private": true,
+  "version": "0.0.0",
   "description": "qiao-electron-cli demo",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
   "scripts": {
     "init-pack": "npm i",
-    "init-main": "cd qe-src/qe-main && npm i",
-    "init-main-m1": "cd qe-src/qe-main && npm i --target_arch=arm64",
-    "init-renderer": "cd qe-src/qe-renderer && npm i",
-    "init-all": "npm run init-pack && npm run init-main && npm run init-renderer",
-    "init-all-m1": "npm run init-pack && npm run init-main-m1 && npm run init-renderer",
-    "build": "cd qe-src/qe-renderer && npm run build",
-    "start": "electron qe-src/qe-main",
-    "debug": "electron qe-src/qe-main --inspect=5858",
-    "dev": "electron qe-src/qe-main dev",
-    "dist": "qelectron d ./qe-pack/qe.config.js",
+    "init-main": "cd src && npm i",
+    "init-main-m1": "cd src && npm i --target_arch=arm64",
+    "init-all": "npm run init-pack && npm run init-main",
+    "init-all-m1": "npm run init-pack && npm run init-main-m1",
+    "start": "electron src",
+    "debug": "electron src --inspect=5858",
+    "dev": "electron src dev",
+    "dist": "qelectron d ./pack/qiao-electronconfig.js",
     "icon": "qelectron icon ./qzip-pack/static/icon/pic.png",
     "prepackmac": "npm run build && npm run dist",
-    "packmac": "qelectron pm ./qe-pack/qe.config.js",
-    "packdmg": "qelectron pd ./qe-pack/qe.config.js",
-    "uploaddmg": "qelectron ud ./qe-pack/qe.config.js"
+    "packmac": "qelectron pm ./pack/qiao-electronconfig.js",
+    "packdmg": "qelectron pd ./pack/qiao-electronconfig.js",
+    "uploaddmg": "qelectron ud ./pack/qiao-electronconfig.js"
   },
   "devDependencies": {
-    "electron": "^18.2.3",
-    "qiao-electron-cli": "^0.6.5"
+    "electron": "^21.1.1",
+    "qiao-electron-cli": "^0.8.9"
   }
 }
