--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "qiao-electron-cli",
-  "version": "0.8.9",
-  "description": "electron cli tools",
-  "keywords": [
-    "electron",
-    "tools"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-electron-cli",
-  "license": "MIT",
-  "main": "index.js",
-  "bin": {
-    "qelectron": "./bin/qelectron.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {},
-  "dependencies": {
-    "electron-installer-dmg": "^4.0.0",
-    "electron-packager": "^16.0.0",
-    "qiao-cli": "^0.3.3",
-    "qiao-cos": "^1.0.3",
-    "qiao-file": "^1.0.1"
-  }
+    "name": "qiao-electron-cli",
+    "version": "0.8.9",
+    "description": "electron cli tools",
+    "keywords": [
+        "electron",
+        "tools",
+        "packager",
+        "dmg",
+        "icns"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-electron-cli",
+    "license": "MIT",
+    "main": "index.js",
+    "bin": {
+        "qelectron": "./bin/qelectron.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {},
+    "dependencies": {
+        "electron-installer-dmg": "^4.0.0",
+        "electron-packager": "^16.0.0",
+        "qiao-cli": "^0.3.3",
+        "qiao-cos": "^1.0.3",
+        "qiao-file": "^1.0.1"
+    }
 }
