--- a/packages/qiao-electron/package.json
+++ b/packages/qiao-electron/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "qiao-electron",
-  "version": "1.3.3",
-  "description": "electron tools",
-  "keywords": [
-    "electron",
-    "tools"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-electron",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "build": "rollup --config rollup.config.js",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "@sentry/electron": "^4.0.3",
-    "qiao-config": "^0.3.7",
-    "qiao-file": "^1.0.1",
-    "qiao-json": "^0.1.0",
-    "qiao-log": "^0.2.4",
-    "qiao-sqlite": "^0.3.9"
-  }
+    "name": "qiao-electron",
+    "version": "1.3.3",
+    "description": "electron tools",
+    "keywords": [
+        "electron",
+        "tools"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-electron",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    },
+    "dependencies": {
+        "qiao-config": "^0.3.7",
+        "qiao-file": "^1.0.1",
+        "qiao-json": "^0.1.0",
+        "qiao-log": "^0.2.4",
+        "qiao-sqlite": "^0.3.9"
+    }
 }
