--- a/packages/qiao-electron/package.json
+++ b/packages/qiao-electron/package.json
@@ -32,7 +32,6 @@
         "qiao-config": "^0.3.7",
         "qiao-file": "^1.0.1",
         "qiao-json": "^0.1.0",
-        "qiao-log": "^0.2.4",
-        "qiao-sqlite": "^0.3.9"
+        "qiao-log": "^0.2.4"
     }
 }
