--- a/packages/qiao-qrcode/package.json
+++ b/packages/qiao-qrcode/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "qiao-qrcode",
-  "version": "2.6.6",
-  "description": "qrcode",
-  "keywords": [
-    "qrcode"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-qrcode",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "dev": "qwebpack dev ./webpack/qiao.webpack.js",
-    "build": "qwebpack build ./webpack/qiao.webpack.js",
-    "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js"
-  },
-  "dependencies": {
-    "qrcode": "^1.5.1"
-  }
+    "name": "qiao-qrcode",
+    "version": "2.6.6",
+    "description": "qrcode",
+    "keywords": [
+        "qrcode",
+        "canvas",
+        "img",
+        "svg"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-qrcode",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "dependencies": {
+        "qrcode": "^1.5.1"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix",
+        "dist": "qwebpack build ./webpack/qiao.webpack.js"
+    }
 }
