--- a/packages/qiao-is-online-browser/package.json
+++ b/packages/qiao-is-online-browser/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "qiao-is-online-browser",
-  "version": "0.2.9",
-  "description": "is online and offline to online on browser",
-  "keywords": [
-    "browser",
-    "is online",
-    "offline to online"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-is-online-browser",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "dist": "qwebpack build ./webpack/qiao.webpack.js",
-    "build": "rollup --config rollup.config.js",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "offline-to-online": "^0.1.3"
-  },
-  "sideEffects": false
+    "name": "qiao-is-online-browser",
+    "version": "0.2.9",
+    "description": "is online and offline to online on browser",
+    "keywords": [
+        "browser",
+        "is online",
+        "offline to online"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-is-online-browser",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "dist": "qwebpack build ./webpack/qiao.webpack.js",
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    },
+    "dependencies": {
+        "offline-to-online": "^0.1.3"
+    },
+    "sideEffects": false
 }
