--- a/packages/offline-to-online/package.json
+++ b/packages/offline-to-online/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "offline-to-online",
-  "version": "0.1.3",
-  "description": "offline to online on nodejs and browser",
-  "keywords": [
-    "offline to online",
-    "nodejs",
-    "browser"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/offline-to-online",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  }
+    "name": "offline-to-online",
+    "version": "0.1.3",
+    "description": "offline to online on nodejs and browser",
+    "keywords": [
+        "offline to online",
+        "nodejs",
+        "browser"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/offline-to-online",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    }
 }
