--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -12,6 +12,8 @@
     "homepage": "https://code.insistime.com/qiao-z",
     "license": "MIT",
     "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
     "files": [
         "src"
     ],
@@ -19,7 +21,15 @@
         "type": "git",
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
     },
-    "scripts": {},
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    },
     "dependencies": {
         "art-template": "^4.13.2",
         "parseurl": "^1.3.3",
