--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -33,6 +33,7 @@
     "dependencies": {
         "art-template": "^4.13.2",
         "parseurl": "^1.3.3",
-        "qiao-file": "^1.0.3"
+        "qiao-file": "^1.0.3",
+        "raw-body": "^2.5.1"
     }
 }
