--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "art-template": "^4.13.2",
+        "cookie": "^0.5.0",
         "parseurl": "^1.3.3",
         "qiao-file": "^1.0.3",
         "qs": "^6.11.0",
