--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -35,6 +35,7 @@
         "cookie": "^0.5.0",
         "parseurl": "^1.3.3",
         "qiao-file": "^1.0.3",
+        "qiao-ua": "^1.0.1",
         "qs": "^6.11.0",
         "raw-body": "^2.5.1"
     }
